Change to gradle Change database to sql

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -17,7 +17,7 @@
     "searchEngine": "elasticsearch",
     "enableSwaggerCodegen": false,
     "messageBroker": false,
-    "buildTool": "maven",
+    "buildTool": "gradle",
     "enableSocialSignIn": false,
     "useSass": true,
     "clientPackageManager": "yarn",
